# silver_layer

./: .gitignore  README.md  databricks.yml  manifest.mf  pyproject.toml
config/: data_governance.yml  data_quality.yml  parameter.yml  silver_config.csv
config/dq/: cust_001.yml  sales_franchises_001.yml  sales_suppliers_001.yml
config/governance/: cust_001.yml  sales_franchises_001.yml
notebooks/: run_bulk_transforms.py
notebooks/stages/: 00_validate.py  01_transform.py  02_data_quality.py  03_governance.py  04_audit.py  05_optimize.py
resources/: silver_pipeline_job.yml
scripts/: deploy.sh  generate_job_yml.py
sql/: cust_orders_001.sql
tests/: __init__.py  conftest.py  test_config_loader.py  test_transformation_engine.py
utils/: __init__.py  config_loader.py  dq_engine.py  governance_engine.py  logger.py  silver_io.py  transform_engine.py
